# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/python_template/: main.py
tests/: test_main.py
